; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_ssl_calls.c_mpShiftLeft.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_ssl_calls.c_mpShiftLeft.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BITS_PER_DIGIT = common dso_local global i32 0, align 4
@HIBITMASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32)* @mpShiftLeft to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpShiftLeft(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @BITS_PER_DIGIT, align 4
  %17 = icmp uge i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %74

19:                                               ; preds = %4
  %20 = load i32, i32* @HIBITMASK, align 4
  store i32 %20, i32* %12, align 4
  store i32 1, i32* %10, align 4
  br label %21

21:                                               ; preds = %30, %19
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ult i32 %22, %23
  br i1 %24, label %25, label %33

25:                                               ; preds = %21
  %26 = load i32, i32* %12, align 4
  %27 = ashr i32 %26, 1
  %28 = load i32, i32* %12, align 4
  %29 = or i32 %27, %28
  store i32 %29, i32* %12, align 4
  br label %30

30:                                               ; preds = %25
  %31 = load i32, i32* %10, align 4
  %32 = add i32 %31, 1
  store i32 %32, i32* %10, align 4
  br label %21

33:                                               ; preds = %21
  %34 = load i32, i32* %8, align 4
  %35 = icmp eq i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %33
  store i32 0, i32* %12, align 4
  br label %37

37:                                               ; preds = %36, %33
  %38 = load i32, i32* @BITS_PER_DIGIT, align 4
  %39 = load i32, i32* %8, align 4
  %40 = sub i32 %38, %39
  store i32 %40, i32* %11, align 4
  store i32 0, i32* %13, align 4
  store i32 0, i32* %10, align 4
  br label %41

41:                                               ; preds = %69, %37
  %42 = load i32, i32* %10, align 4
  %43 = load i32, i32* %9, align 4
  %44 = icmp ult i32 %42, %43
  br i1 %44, label %45, label %72

45:                                               ; preds = %41
  %46 = load i32*, i32** %7, align 8
  %47 = load i32, i32* %10, align 4
  %48 = zext i32 %47 to i64
  %49 = getelementptr inbounds i32, i32* %46, i64 %48
  %50 = load i32, i32* %49, align 4
  %51 = load i32, i32* %12, align 4
  %52 = and i32 %50, %51
  %53 = load i32, i32* %11, align 4
  %54 = ashr i32 %52, %53
  store i32 %54, i32* %14, align 4
  %55 = load i32*, i32** %7, align 8
  %56 = load i32, i32* %10, align 4
  %57 = zext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  %59 = load i32, i32* %58, align 4
  %60 = load i32, i32* %8, align 4
  %61 = shl i32 %59, %60
  %62 = load i32, i32* %13, align 4
  %63 = or i32 %61, %62
  %64 = load i32*, i32** %6, align 8
  %65 = load i32, i32* %10, align 4
  %66 = zext i32 %65 to i64
  %67 = getelementptr inbounds i32, i32* %64, i64 %66
  store i32 %63, i32* %67, align 4
  %68 = load i32, i32* %14, align 4
  store i32 %68, i32* %13, align 4
  br label %69

69:                                               ; preds = %45
  %70 = load i32, i32* %10, align 4
  %71 = add i32 %70, 1
  store i32 %71, i32* %10, align 4
  br label %41

72:                                               ; preds = %41
  %73 = load i32, i32* %13, align 4
  store i32 %73, i32* %5, align 4
  br label %74

74:                                               ; preds = %72, %18
  %75 = load i32, i32* %5, align 4
  ret i32 %75
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
